[package]
name = "dev-toolbox"
version = "2026.2.28"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.49.0", features = ["full"] }
unicode-segmentation = "1.10"
dotenv = "0.15"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = "1.8"
base64 = "0.22.1"

arboard = "3.6.1"
async-trait = "0.1.89"
toml = "1.0.3"
dirs = "6.0.0"
thiserror = "2.0.18"

[dev-dependencies]
