[package]
name = "dev-toolbox"
version = "2026.2.28"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time"] }
unicode-segmentation = "1.13.2"
dotenvy = "0.15"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = "1.8"
base64 = "0.22.1"

arboard = "3.6.1"
toml = "1.1.2"
dirs = "6.0.0"
thiserror = "2.0.18"
hex = "0.4.3"
urlencoding = "2.1.3"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
